<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.first.FirstTimeActivity"
    android:background="@color/secondary_green"
    android:paddingBottom="32dp">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcome"
        style="@style/bold_12sp"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-16dp"
        android:layout_marginRight="-16dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@id/ivLogo"
        app:layout_constraintRight_toRightOf="@id/ivLogo"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <TextView
        android:id="@+id/tvDesc"
        android:textColor="@color/white"
        style="@style/regular_12sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_desc"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tvWelcome"
        app:layout_constraintStart_toStartOf="@+id/tvWelcome"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <Button
        android:id="@+id/btSignup"
        style="@style/bold_12sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/primary_green"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="@id/ivLogo"
        app:layout_constraintRight_toRightOf="@id/ivLogo"
        app:layout_constraintTop_toBottomOf="@id/tvDesc" />

    <Button
        android:id="@+id/btLogin"
        style="@style/bold_12sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/primary_green"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="@+id/btSignup"
        app:layout_constraintLeft_toLeftOf="@id/ivLogo"
        app:layout_constraintRight_toRightOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="@+id/btSignup"
        app:layout_constraintTop_toBottomOf="@id/btSignup" />

    <Button
        visi
        android:id="@+id/btGuest"
        style="@style/bold_12sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/primary_green"
        android:text="@string/guest"
        app:layout_constraintEnd_toEndOf="@+id/btLogin"
        app:layout_constraintLeft_toLeftOf="@id/ivLogo"
        app:layout_constraintRight_toRightOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="@+id/btLogin"
        app:layout_constraintTop_toBottomOf="@id/btLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>