<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity"
    android:orientation="vertical"
    android:background="@color/secondary_green">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <ImageView
            android:id="@+id/ivLogoRegist"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/rectRegist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@id/ivLogoRegist"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/primary_rect_rounded"
            android:paddingBottom="32dp"
            app:layout_constraintBottom_toBottomOf="@id/tvLoginHere"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogoRegist"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvRegist"
            style="@style/bold_20sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="32dp"
            android:text="@string/register"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="@id/rectRegist"
            app:layout_constraintRight_toRightOf="@id/rectRegist"
            app:layout_constraintTop_toTopOf="@id/rectRegist" />

        <ImageView
            android:id="@+id/iv_register_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/tvRegist"
            app:layout_constraintTop_toBottomOf="@+id/tvRegist"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/bt_camera"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/secondary_rect_rounded"
            android:text="Camera"
            app:icon="@drawable/baseline_photo_camera_24"
            app:layout_constraintBottom_toBottomOf="@+id/iv_register_photo"
            app:layout_constraintEnd_toEndOf="@+id/bt_gallery"
            app:layout_constraintStart_toStartOf="@+id/bt_gallery"
            app:layout_constraintTop_toTopOf="@id/iv_register_photo"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/bt_gallery"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:background="@drawable/secondary_rect_rounded"
            android:text="Gallery"
            app:icon="@drawable/baseline_photo_library_24"
            app:layout_constraintBottom_toBottomOf="@+id/iv_register_photo"
            app:layout_constraintLeft_toRightOf="@id/iv_register_photo"
            app:layout_constraintTop_toTopOf="@id/iv_register_photo"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvNameRegist"
            style="@style/medium_16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="@+id/tvRegist"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvRegist"
            app:layout_constraintTop_toBottomOf="@+id/iv_register_photo" />

        <EditText
            android:id="@+id/etNameRegist"
            style="@style/regular_16sp"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:hint="@string/name_here"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="@+id/tvRegist"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@id/rectRegist"
            app:layout_constraintRight_toRightOf="@id/rectRegist"
            app:layout_constraintStart_toStartOf="@+id/tvRegist"
            app:layout_constraintTop_toBottomOf="@id/tvNameRegist" />

        <TextView
            android:id="@+id/tvUsernameRegist"
            style="@style/medium_16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Username"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="@+id/tvRegist"
            app:layout_constraintLeft_toLeftOf="@id/rectRegist"
            app:layout_constraintRight_toRightOf="@id/rectRegist"
            app:layout_constraintStart_toStartOf="@+id/tvRegist"
            app:layout_constraintTop_toBottomOf="@id/etNameRegist" />

        <EditText
            android:id="@+id/etUsernameRegist"
            style="@style/regular_16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Your username"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="@+id/tvRegist"
            app:layout_constraintLeft_toLeftOf="@id/rectRegist"
            app:layout_constraintRight_toRightOf="@id/rectRegist"
            app:layout_constraintStart_toStartOf="@+id/tvRegist"
            app:layout_constraintTop_toBottomOf="@id/tvUsernameRegist" />

        <TextView
            android:id="@+id/tvPasswordRegist"
            style="@style/medium_16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="@+id/tvRegist"
            app:layout_constraintLeft_toLeftOf="@id/rectRegist"
            app:layout_constraintRight_toRightOf="@id/rectRegist"
            app:layout_constraintStart_toStartOf="@+id/tvRegist"
            app:layout_constraintTop_toBottomOf="@id/etUsernameRegist" />

        <EditText
            android:id="@+id/etPasswordRegist"
            style="@style/medium_16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password_here"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/tvRegist"
            app:layout_constraintLeft_toLeftOf="@id/rectRegist"
            app:layout_constraintRight_toRightOf="@id/rectRegist"
            app:layout_constraintStart_toStartOf="@+id/tvRegist"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordRegist" />

        <TextView
            android:id="@+id/tvConfirmPassRegist"
            style="@style/medium_16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirm_pass"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="@+id/tvRegist"
            app:layout_constraintLeft_toLeftOf="@id/rectRegist"
            app:layout_constraintRight_toRightOf="@id/rectRegist"
            app:layout_constraintStart_toStartOf="@+id/tvRegist"
            app:layout_constraintTop_toBottomOf="@id/etPasswordRegist" />

        <EditText
            android:id="@+id/etConfirmPassRegist"
            style="@style/medium_16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/confirm_pass_here"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/tvRegist"
            app:layout_constraintLeft_toLeftOf="@id/rectRegist"
            app:layout_constraintRight_toRightOf="@id/rectRegist"
            app:layout_constraintStart_toStartOf="@+id/tvRegist"
            app:layout_constraintTop_toBottomOf="@id/tvConfirmPassRegist" />

        <Button
            android:id="@+id/btRegist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/secondary_green"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/tvRegist"
            app:layout_constraintLeft_toLeftOf="@id/rectRegist"
            app:layout_constraintRight_toRightOf="@id/rectRegist"
            app:layout_constraintStart_toStartOf="@+id/tvRegist"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassRegist" />

        <TextView
            android:id="@+id/tvLoginHere"
            style="@style/regular_12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/click_login"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/tvRegist"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@id/rectRegist"
            app:layout_constraintRight_toRightOf="@id/rectRegist"
            app:layout_constraintStart_toStartOf="@+id/tvRegist"
            app:layout_constraintTop_toBottomOf="@id/btRegist"
            android:paddingBottom="32dp"/>
        <ProgressBar
            android:visibility="gone"
            android:id="@+id/pbRegist"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>